--- a/src/styles/StatusModal.css
+++ b/src/styles/StatusModal.css
@@ -1,7 +1,3 @@
-.modal {
-    padding-right: 16px!important;
-}
-
 .modal-body {
     font-size: 24px;
 }
@@ -10,6 +6,11 @@
     background-color: #ED1C24;
     color: #F3EFF5;
     font-family: 'Acme', sans-serif;
+}
+
+body.modal-open {
+    margin-right: -16px!important;
+    padding-right: 16px;
 }
 
 .btn-primary {
